@@ -546,6 +546,10 @@
         <source>Start rated game with Orange against Pentobi level %1?</source>
         <translation>Gewertetes Spiel mit Orange gegen Pentobi Spielstufe %1 beginnen?</translation>
     </message>
+    <message>
+        <source>Not enough memory.</source>
+        <translation>Nicht genügend Speicher.</translation>
+    </message>
 </context>
 <context>
     <name>MenuComputer</name>
@@ -1152,6 +1156,10 @@
         <source>GembloQ (3 players)</source>
         <translation>GembloQ (3 Spieler)</translation>
     </message>
+    <message>
+        <source>Callisto (2 players, 4 colors)</source>
+        <translation>Callisto (2 Spieler, 2 Farben)</translation>
+    </message>
 </context>
 <context>
     <name>SaveDialog</name>
@@ -1195,11 +1203,11 @@
     <name>main</name>
     <message>
         <source>Not enough memory.</source>
-        <translation>Nicht genügend Speicher.</translation>
+        <translation type="vanished">Nicht genügend Speicher.</translation>
     </message>
     <message>
         <source>Pentobi</source>
-        <translation>Pentobi</translation>
+        <translation type="vanished">Pentobi</translation>
     </message>
 </context>
 </TS>
